--- a/index.html
+++ b/index.html
@@ -1182,7 +1182,7 @@
               </div>
               <div>
                 <h4>Email</h4>
-                <p>dharmik.savani@email.com</p>
+                <p>dharmik.savani.pt@gmail.com</p>
               </div>
             </div>
             <div class="contact-item">
