--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dharmik V. Savani - Cloud & AI/ML Developer</title>
+    <title>Dharmik V. Savani - Cloud & AI/ML Learner</title>
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
       rel="stylesheet"
@@ -738,7 +738,7 @@
         </div>
         <div class="hero-image">
           <div class="hero-avatar">
-            <i class="fas fa-user-circle"></i>
+            <img src="path/to/your/image.jpg" alt="Dharmik V. Savani" />
           </div>
         </div>
       </div>
