--- a/index.html
+++ b/index.html
@@ -738,7 +738,10 @@
         </div>
         <div class="hero-image">
           <div class="hero-avatar">
-            <img src="path/to/your/image.jpg" alt="Dharmik V. Savani" />
+            <img
+              src="https://ui-avatars.com/api/?name=Dharmik+Savani&background=2563eb&color=fff&size=350"
+              alt="Dharmik V. Savani"
+            />
           </div>
         </div>
       </div>
