update profile images

--- a/index.html
+++ b/index.html
@@ -737,14 +737,12 @@
           </div>
         </div>
         <div class="hero-image">
-          <div class="hero-avatar">
-            <img
-              src="https://ui-avatars.com/api/?name=Dharmik+Savani&background=2563eb&color=fff&size=350"
-              alt="Dharmik V. Savani"
-            />
-          </div>
-        </div>
-      </div>
+    <div class="hero-avatar">
+        <img src="profile.jpg" alt="Dharmik V. Savani" class="profile-image" 
+             onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+        <i class="fas fa-user-circle" style="display:none;"></i>
+    </div>
+</div>
     </section>
 
     <!-- About Section -->
@@ -759,7 +757,7 @@
         <div class="about-content">
           <div class="about-image">
             <div class="about-avatar">
-              <i class="fas fa-user"></i>
+                 <img src="profile.jpg" alt="Dharmik V. Savani" class="profile-image">
             </div>
           </div>
           <div class="about-text">
