--- a/index.html
+++ b/index.html
@@ -738,7 +738,7 @@
         </div>
         <div class="hero-image">
     <div class="hero-avatar">
-        <img src="profile.jpg" alt="Dharmik V. Savani" class="profile-image" 
+        <img src="A:\lern\ss\dharmik097.github.io\resources\profile.jpg" alt="Dharmik V. Savani" class="profile-image" 
              onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
         <i class="fas fa-user-circle" style="display:none;"></i>
     </div>
@@ -757,7 +757,7 @@
         <div class="about-content">
           <div class="about-image">
             <div class="about-avatar">
-                 <img src="profile.jpg" alt="Dharmik V. Savani" class="profile-image">
+                 <img src="A:\lern\ss\dharmik097.github.io\resources\profile.jpg" alt="Dharmik V. Savani" class="profile-image">
             </div>
           </div>
           <div class="about-text">
