--- a/index.html
+++ b/index.html
@@ -738,10 +738,9 @@
         </div>
         <div class="hero-image">
     <div class="hero-avatar">
-        <img src="A:\lern\ss\dharmik097.github.io\resources\profile.jpg" alt="Dharmik V. Savani" class="profile-image" 
-             onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
-        <i class="fas fa-user-circle" style="display:none;"></i>
+        <img src="profile.jpg" alt="Dharmik V. Savani" class="profile-image">
     </div>
+</div>
 </div>
     </section>
 
@@ -754,12 +753,11 @@
             Learn more about my background, skills, and passion for technology
           </p>
         </div>
-        <div class="about-content">
-          <div class="about-image">
+        <div class="about-image">
             <div class="about-avatar">
-                 <img src="A:\lern\ss\dharmik097.github.io\resources\profile.jpg" alt="Dharmik V. Savani" class="profile-image">
+                <img src="profile.jpg" alt="Dharmik V. Savani" class="profile-image">
             </div>
-          </div>
+        </div>
           <div class="about-text">
             <p>
               I'm a passionate Cloud & AI/ML Developer currently pursuing MSc in
